Bug 106445 - clicking url in mail doesn't focus browser window.  r=jst, sr=hyatt.